# hello-cli

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: index.md
src/hello_cli/: main.py
tests/: test_basic.py
