[project]
name = "hello-cli"
version = "0.1.0"
description = "Una mini CLI di esempio"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Marco Pagliarini" }]
dependencies = []

[project.scripts]
hello-cli = "hello_cli.main:run"

[project.optional-dependencies]
dev = ["pytest>=7", "black>=24", "ruff>=0.5"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B"]
